<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.location.LocationActivity">

    <data>

        <variable
            name="vm"
            type="net.alanproject.rickandmorty.ui.activity.location.LocationViewModel" />

        <variable
            name="view"
            type="net.alanproject.rickandmorty.ui.activity.location.LocationActivity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/collapsing_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@null"
                app:contentScrim="@color/purple"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    app:layout_collapseMode="parallax">


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_background"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_margin="8dp"
                        android:scaleType="center"
                        app:blurredCharacterDrawableImage="@{@drawable/location_title}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/roundedCornerImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/tv_image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="5dp"
                        android:scaleType="centerCrop"
                        app:characterDrawableImage="@{@drawable/location_icon}"
                        app:layout_constraintBottom_toBottomOf="@id/iv_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_background"
                        app:shapeAppearanceOverlay="@style/circle"
                        app:strokeColor="@color/white"
                        app:strokeWidth="5dp" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_name"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:autoSizeTextType="uniform"
                        android:elevation="4dp"
                        android:text="@{view.location.name}"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@id/tv_image"
                        app:layout_constraintStart_toStartOf="@id/tv_image"
                        app:layout_constraintTop_toBottomOf="@id/tv_image"
                        tools:text="Earth" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_type_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="68dp"
                        android:text="@string/tv_type_title"
                        android:textColor="@color/light_grey_2"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_image" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{view.location.type}"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/tv_type_title"
                        app:layout_constraintTop_toBottomOf="@id/tv_type_title"
                        tools:text="Planet" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_dimension_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="140dp"
                        android:text="@string/tv_dimension_title"
                        android:textColor="@color/light_grey_2"
                        android:textSize="12sp"
                        app:layout_constraintStart_toEndOf="@id/tv_type_title"
                        app:layout_constraintTop_toTopOf="@id/tv_type_title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{view.location.dimension}"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/tv_dimension_title"
                        app:layout_constraintTop_toTopOf="@id/tv_type"
                        tools:text="Human" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@color/dark_grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_type" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.appbar.MaterialToolbar

                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_inner2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_residents_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/tv_residents_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_characters"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_residents_title"
                app:updateCharacterList="@{vm.characterList}" />

            <TextView
                android:id="@+id/tv_no_resident"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/tv_no_resident"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/recycler_characters"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/recycler_characters" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminateTint="@color/white_100"
            android:visibility="@{vm.progressBarVisibility}" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
